syntax = "proto3";

package grpc_psql_example.user;

option go_package = "github.com/exsmund/grpc-psql-example/proto";

service UserRepo {
  rpc SaveUser(User) returns (SaveUserResponse) {}
  rpc DeleteUser(UserUUID) returns (DeleteUserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (stream User) {}
}

message UserUUID {
  bytes id = 1;
}

message User {
  bytes id = 1;
  string name = 2;
  string email = 3;
}

message SaveUserResponse {
  Status status = 1;
  User data = 2;
}

message DeleteUserResponse {
  Status status = 1;
}

enum Status {
  Success = 0;
  InternalError = 1;
  NotFound = 2;
}

message GetUsersRequest {
}
